k8s/kafka-gateway-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka-gateway
  labels:
    name: kafka-gateway
    purpose: api-gateway
